# deepspace-game

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  deploy.sh  dev.sh  index.html  main.tscn  package-lock.json  package.json  project.godot  test-native.sh  test-overlay.sh  vercel.json
.github/workflows/: wasm-build.yml
assets/npcs/: fox.blueprint.json  knight.blueprint.json  soldier.blueprint.json
assets/shaders/: bindings.wgsl  blit.wgsl  brick.wgsl  bsl_voxel.wgsl  cursor_probe.wgsl  df64.wgsl  entities.wgsl  entity_heightmap_clamp.wgsl  entity_raster.wgsl  face_math.wgsl  face_walk.wgsl  heightmap_gen.wgsl  instanced_block.wgsl  main.wgsl  march.wgsl  march_cartesian.wgsl  (+30 more)
docs/: README.md  build-worktree.md  color-picker-investigation.md  horizon-diagnosis.md  local-shell-lod.md  locality-prime-directive.md  no-absolute-coordinates.md  npc-instancing-findings.md  npc-perf-baseline.md  outline-and-placement-bugs.md  progress.md  render-perf-isolation-playbook.md  rewrite-rule.md  scaling-deep-trees.md  sphere-holes-investigation.md  sphere-terrain-postmortem.md  testing.md  vision.md
player/: character_skin.tscn  player.tscn
prompts/: sphere-ribbon-pop-next-session.md
scripts/: analyze-png.py  capture-gpu-trace.sh  compare-place-induced.sh  compare_stack_depth.sh  compose_shader.py  cpu_gpu_parity_check.sh  cursor_detail_probe.sh  deploy.sh  dev-wasm.sh  dev.sh  fetch-glb-presets.sh  harness-run.sh  harness-sweep.sh  live_perf_sphere_vs_plain.sh  lod-iter.sh  measure_register_pressure.sh  parse-metal-trace.py  perf-breakdown.sh  perf-entity-raster.sh  proto-screenshot-break.sh  proto-screenshot.sh  query_pipeline_stats.swift  regen-vox-entities.sh  render-harness.sh  replicate_edit_lag.sh  replicate_edit_spike.sh  replicate_entity_cutoff.sh  replicate_movement_lag.sh  replicate_movement_lag_deep.sh  replicate_movement_lag_long.sh  replicate_superchunk_lag.sh  repro-jerusalem-lag.sh  repro-planet-altitude-sweep.sh.tmpl  repro-planet.sh.tmpl  repro-sphere-d10-bug.sh  repro-sphere-d10-elevation.sh  sphere-deep-depth-check.sh  sphere-orbit.sh  sphere-zoom-invariance.sh  sphere_break_probe.sh  (+10 more)
src/: bridge.rs  camera.rs  diagnostics.rs  editing.rs  game_state.rs  input.rs  interaction.rs  inventory.rs  lib.rs  main.js  main.rs  npc.rs  overlay.rs  player.rs  postprocess.rs  renderer.rs  shader_compose.rs  shaders.rs  tests.rs
tests/: CONTEXT.md  e2e_layer_descent.rs  e2e_layer_descent_sphere.rs  e2e_sphere_descent.rs  heightmap.rs  planet_basic.rs  planet_edit_decoupling.rs  planet_poles.rs  planet_silhouette.rs  planet_wrap.rs  proto_screenshot.rs  proto_screenshot_diag.rs  remap_sphere_edit.rs  remap_sphere_silhouette.rs  render_entities.rs  render_perf.rs  render_sphere.rs  render_visibility.rs  sphere_default_spawn.rs  sphere_ribbon_pop_precision.rs  sphere_zoom_seamless.rs  stars_visibility.rs  visual_image_analysis.rs  wrapped_planet_visual.rs  wrapped_planet_wrap.rs
tools/: README.md  build_npc_blueprint.py  extract_skeleton.py  extract_textures.sh  filetovox.sh  glb_to_vox.py  preview_blueprint.py
tools/scene_voxelize/generate/: Cargo.toml
tools/scene_voxelize/generate/src/: lib.rs  main.rs  models.rs  palette.rs
tools/scene_voxelize/generate/src/gltf/: scene.rs  schema.rs
tools/scene_voxelize/generate/src/shaders/: voxelize.wgsl
ui/: assets  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+386 files in other folders)
