[package]
name = "deepspace-game"
version = "0.2.0"
edition = "2024"
default-run = "deepspace-game"

[dependencies]
winit = "0.30"
wgpu = "25"
web-time = "1"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
dot_vox = "5"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
png = "0.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wry = { version = "0.47", features = ["transparent"] }
raw-window-handle = "0.6"
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSView", "NSResponder", "NSWindow"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_log = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
strip = true
